[project]
name = "api-banco-python-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "WenFra005",email = "wendellfrancisco2005@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
